Source/WebCore/html/HTMLObjectElement.cpp
@@ -247,7 +247,11 @@ bool HTMLObjectElement::hasValidClassId()
 
     // HTML5 says that fallback content should be rendered if a non-empty
     // classid is specified for which the UA can't find a suitable plug-in.
-    return classId().isEmpty();
+    // However, in the case where an object tag with a classid also has a valid
+    // MIME type and no fallback content is present, it makes sense to ignore
+    // the classid and attempt to load the object rather than fall back to
+    // nothing.
+    return classId().isEmpty() || !hasFallbackContent();
 }
 
 // FIXME: This should be unified with HTMLEmbedElement::updateWidget and
